New Struct and More Comfort
Recreated the tree and made it soft.

--- a/credentials/settings.yaml
+++ b/credentials/settings.yaml
@@ -1,7 +1,7 @@
 client_config_backend: file
 client_config:
-    client_id: 
-    client_secret: 
+    client_id: paste client id here
+    client_secret: paste client id here
 
 save_credentials: True
 save_credentials_backend: file
